--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "amcharts3": "github:amcharts/amcharts3",
     "ammap3": "github:amcharts/ammap3",
     "angular2-datatable": "0.6.0",
+    "angular2-oauth2": "^1.3.10",
     "animate.css": "3.5.2",
+    "autopulous-xdom2jso": "0.0.12",
     "bootstrap": "4.0.0-alpha.6",
     "chart.js": "1.1.1",
     "chartist": "0.10.1",
