--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ng2-admin",
+  "name": "BDI",
   "version": "1.0.0",
   "description": "Angular and Bootstrap 4 Admin Template.",
   "author": "Akveo <contact@akveo.com>",
-  "homepage": "http://akveo.github.io/ng2-admin/",
+  "homepage": "https://github.com/BestMood-Tech/IBD",
   "repository": {
     "type": "git",
-    "url": "https://github.com/akveo/ng2-admin.git"
+    "url": "https://github.com/BestMood-Tech/IBD.git"
   },
   "bugs": {
-    "url": "https://github.com/akveo/ng2-admin/issues"
+    "url": "https://github.com/BestMood-Tech/IBD/issues"
   },
   "license": "MIT",
   "scripts": {
@@ -35,9 +35,7 @@
     "e2e": "ng e2e",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc typings coverage dist",
     "clean:dist": "npm run rimraf -- dist",
-    "clean:coverage": "npm run rimraf -- coverage",
-    "docs:deploy": "wintersmith build -C docs && gh-pages -d docs/build",
-    "docs:serve": "wintersmith preview -C docs"
+    "clean:coverage": "npm run rimraf -- coverage"
   },
   "private": true,
   "dependencies": {
@@ -55,35 +53,20 @@
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "@swimlane/ngx-charts": "^6.0.2",
-    "amcharts3": "github:amcharts/amcharts3",
-    "ammap3": "github:amcharts/ammap3",
     "angular2-datatable": "0.6.0",
     "angular2-oauth2": "^1.3.10",
     "animate.css": "3.5.2",
     "autopulous-xdom2jso": "0.0.12",
     "bootstrap": "4.0.0-alpha.6",
-    "chart.js": "1.1.1",
-    "chartist": "0.10.1",
     "chroma-js": "1.3.3",
-    "ckeditor": "4.6.2",
     "core-js": "2.4.1",
     "d3": "^4.10.2",
-    "easy-pie-chart": "2.1.7",
     "font-awesome": "4.7.0",
-    "fullcalendar": "3.3.1",
-    "google-maps": "3.2.1",
     "ionicons": "2.0.1",
     "jquery": "3.2.1",
     "jquery-slimscroll": "1.3.8",
-    "leaflet": "0.7.7",
-    "leaflet-map": "0.2.1",
     "lodash": "4.17.4",
-    "ng2-ckeditor": "1.1.6",
-    "ng2-completer": "1.3.1",
     "ng2-handsontable": "0.48.0",
-    "ng2-slim-loading-bar": "4.0.0",
-    "ng2-smart-table": "1.0.3",
-    "ng2-tree": "2.0.0-alpha.5",
     "ngx-uploader": "2.2.5",
     "normalize.css": "6.0.0",
     "roboto-fontface": "0.7.0",
@@ -100,7 +83,6 @@
     "@types/lodash": "4.14.61",
     "@types/node": "6.0.69",
     "codelyzer": "3.0.1",
-    "gh-pages": "0.12.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.1",
@@ -112,7 +94,6 @@
     "npm-run-all": "4.0.2",
     "protractor": "5.1.0",
     "rimraf": "2.6.1",
-    "standard-changelog": "1.0.1",
     "stylelint": "7.10.1",
     "ts-node": "2.1.2",
     "tslint": "5.2.0",
@@ -120,8 +101,6 @@
     "tslint-language-service": "0.9.6",
     "typescript": "2.3.2",
     "typogr": "0.6.6",
-    "underscore": "1.8.3",
-    "wintersmith": "2.2.5",
-    "wintersmith-sassy": "1.1.0"
+    "underscore": "1.8.3"
   }
 }
