--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BDI",
+  "name": "IBD",
   "version": "1.0.0",
   "description": "Angular and Bootstrap 4 Admin Template.",
   "author": "Akveo <contact@akveo.com>",
