--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.4",
+    "@angular/cli": "^1.4.2",
     "@angular/compiler-cli": "4.1.3",
     "@types/fullcalendar": "2.7.40",
     "@types/jasmine": "2.5.38",
@@ -85,7 +85,11 @@
     "@types/jquery.slimscroll": "1.3.30",
     "@types/lodash": "4.14.61",
     "@types/node": "6.0.69",
+    "body-parser": "^1.18.1",
     "codelyzer": "3.0.1",
+    "compression": "^1.7.0",
+    "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.5.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "karma": "1.4.1",
@@ -94,6 +98,7 @@
     "karma-coverage-istanbul-reporter": "0.2.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
+    "method-override": "^2.3.9",
     "npm-run-all": "4.0.2",
     "protractor": "5.1.0",
     "rimraf": "2.6.1",
